--- a/surgealert/templates/db.html
+++ b/surgealert/templates/db.html
@@ -1,10 +1,11 @@
 <h1>Page View Report</h1>
 
-
+<table>
 <ul>
 
 {% for greeting in greetings %}
-    <li>{{ greeting.when }}</li>
+    <tr><li>{{ greeting.when }}</li></tr>
 {% endfor %}
 
 </ul>
+</table>
